* fixed no-wrapping of termbrowser concepts

--- a/KnowWE-Essentials/KnowWE-Plugin-Core/src/main/resources/webapp/KnowWEExtension/css/KnowWE-Plugin-Core.css
+++ b/KnowWE-Essentials/KnowWE-Plugin-Core/src/main/resources/webapp/KnowWEExtension/css/KnowWE-Plugin-Core.css
@@ -311,7 +311,7 @@ span.markupMenuItem {
 
 .toolMenuDecorated {
 	position: relative;
-	white-space: nowrap;
+	white-space: normal;
 }
 
 .toolsMenuDecorator {
